--- a/tools_function/unittest/testreport/report1.html
+++ b/tools_function/unittest/testreport/report1.html
@@ -171,7 +171,7 @@
         d.write("<pre>");
         d.write(html_escape(output_list[id]));
         d.write("\n");
-        d.write("<a href='javascript:window.close()'>close</a>\n");
+        d.write("<a.text href='javascript:window.close()'>close</a.text>\n");
         d.write("</pre>\n");
         d.close();
     }
